# Django_mvp_personal_blog

./: README.md  pyproject.toml
mvp_django_blog/: manage.py
mvp_django_blog/blog/: admin.py  forms.py  models.py  urls.py  views.py
mvp_django_blog/core/: models.py
mvp_django_blog/mvp_django_blog/: asgi.py  settings.py  urls.py  wsgi.py
mvp_django_blog/pages/: urls.py  views.py
